compiler/testData/diagnostics/tests/ProcessingEmptyImport.kt
// RUN_PIPELINE_TILL: FRONTEND
import<!SYNTAX!><!>

fun firstFun() {}

/* GENERATED_FIR_TAGS: functionDeclaration */
